--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo build"
+    "build": "turbo build",
+    "release": "turbo build && changeset publish",
+    "version": "turbo build && changeset version"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.7",
+    "@changesets/cli": "^2.25.2",
     "turbo": "^1.6.3"
   }
 }
