--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
     "turbo": "^1.6.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
